Add warning message for sign up and log in until user data can be stored securely and persists on a separate database server. Remove 'Forgot your password' button for security until said user data storage is resolved.

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,5 @@
+<h1 style="color: red"> Please do NOT use a real password or email. This is a personal project and I haven't figured out how to store user data securely yet - but soon! </h1>
+
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
