--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
       <div style="text-align: center; font-size: 28px; font-weight: bold;">
         <%= link_to "Color Ranker", index_path, style: "text-decoration: none; color: inherit;" %>
       </div>
+      <i class="bi bi-house"></i>
 
       <!-- Sign Up / Login (top-right corner) -->
       <div style="position: absolute; top: 10px; right: 10px;">
